from mixed 1.7.10/1.10.2 to 1.12.2 may contain some bugs ASM errors on startup outside of dev environment, does otherwise launch without a hitch.