@@ -3,7 +3,6 @@ package hxckdms.hxccore.commands;
 import hxckdms.hxccore.api.command.AbstractSubCommand;
 import hxckdms.hxccore.api.command.HxCCommand;
 import hxckdms.hxccore.api.command.TranslatedCommandException;
-import hxckdms.hxccore.libraries.GlobalVariables;
 import hxckdms.hxccore.utilities.HxCPlayerInfoHandler;
 import hxckdms.hxccore.utilities.ServerTranslationHelper;
 import net.minecraft.command.CommandBase;
@@ -11,6 +10,7 @@ import net.minecraft.command.CommandException;
 import net.minecraft.command.ICommandSender;
 import net.minecraft.entity.player.EntityPlayer;
 import net.minecraft.entity.player.EntityPlayerMP;
+import net.minecraft.server.MinecraftServer;
 import net.minecraft.util.math.BlockPos;
 import net.minecraft.util.text.Style;
 import net.minecraft.util.text.TextComponentString;
@@ -35,37 +35,37 @@ public class CommandChatColor extends AbstractSubCommand<CommandHxC> {
     }
 
     @Override
-    public void execute(ICommandSender sender, LinkedList<String> args) throws CommandException {
+    public void execute(MinecraftServer server, ICommandSender sender, LinkedList<String> args) throws CommandException {
         switch (args.size()) {
             case 0:
                 if (sender instanceof EntityPlayerMP) {
                     HxCPlayerInfoHandler.setString((EntityPlayerMP) sender, "ChatColor", "");
-                    sender.addChatMessage(ServerTranslationHelper.getTranslation(sender, "commands.chatColor.removed.self").setStyle(new Style().setColor(TextFormatting.YELLOW)));
+                    sender.sendMessage(ServerTranslationHelper.getTranslation(sender, "commands.chatColor.removed.self").setStyle(new Style().setColor(TextFormatting.YELLOW)));
                 }
                 break;
             default:
-                if (Arrays.asList(GlobalVariables.server.getPlayerList().getAllUsernames()).contains(args.get(0))) {
-                    EntityPlayerMP target = CommandBase.getPlayer(GlobalVariables.server, sender, args.getFirst());
+                if (Arrays.asList(server.getOnlinePlayerNames()).contains(args.get(0))) {
+                    EntityPlayerMP target = CommandBase.getPlayer(server, sender, args.getFirst());
                     boolean removing = args.size() == 1 || args.get(1) == null || args.get(1).isEmpty();
                     TextFormatting color = removing ? TextFormatting.WHITE : Arrays.stream(TextFormatting.values()).filter(format -> format.formattingCode == args.get(1).charAt(0)).filter(TextFormatting::isColor).findAny().orElseThrow(() -> new TranslatedCommandException(sender, "commands.error.noColor", args.get(0)));
                     HxCPlayerInfoHandler.setString(target, "ChatColor", !removing ? Character.toString(color.formattingCode) : "");
 
-                    sender.addChatMessage(ServerTranslationHelper.getTranslation(sender, "commands.chatColor." + (!removing ? "set" : "removed") + ".other.sender", target.getName(), new TextComponentString(color.getFriendlyName()).setStyle(new Style().setColor(color))).setStyle(new Style().setColor(TextFormatting.GRAY)));
-                    target.addChatMessage(ServerTranslationHelper.getTranslation(target, "commands.chatColor." + (!removing ? "set" : "removed") + ".other.target", sender.getName(), new TextComponentString(color.getFriendlyName()).setStyle(new Style().setColor(color))).setStyle(new Style().setColor(TextFormatting.YELLOW)));
+                    sender.sendMessage(ServerTranslationHelper.getTranslation(sender, "commands.chatColor." + (!removing ? "set" : "removed") + ".other.sender", target.getDisplayName(), new TextComponentString(color.getFriendlyName()).setStyle(new Style().setColor(color))).setStyle(new Style().setColor(TextFormatting.GRAY)));
+                    target.sendMessage(ServerTranslationHelper.getTranslation(target, "commands.chatColor." + (!removing ? "set" : "removed") + ".other.target", sender.getName(), new TextComponentString(color.getFriendlyName()).setStyle(new Style().setColor(color))).setStyle(new Style().setColor(TextFormatting.YELLOW)));
                 } else if (sender instanceof EntityPlayerMP) {
                     TextFormatting color = Arrays.stream(TextFormatting.values()).filter(format -> format.formattingCode == args.get(0).charAt(0)).filter(TextFormatting::isColor).findAny().orElseThrow(() -> new TranslatedCommandException(sender, "commands.error.noColor", args.get(0)));
                     HxCPlayerInfoHandler.setString((EntityPlayer) sender, "ChatColor", Character.toString(color.formattingCode));
 
-                    sender.addChatMessage(ServerTranslationHelper.getTranslation(sender, "commands.chatColor.set.self", new TextComponentString(color.getFriendlyName()).setStyle(new Style().setColor(color))).setStyle(new Style().setColor(TextFormatting.GREEN)));
+                    sender.sendMessage(ServerTranslationHelper.getTranslation(sender, "commands.chatColor.set.self", new TextComponentString(color.getFriendlyName()).setStyle(new Style().setColor(color))).setStyle(new Style().setColor(TextFormatting.GREEN)));
                 }
                 break;
         }
     }
 
     @Override
-    public List<String> addTabCompletionOptions(ICommandSender sender, LinkedList<String> args, @Nullable BlockPos pos) {
-        if (args.size() == 1) return CommandBase.getListOfStringsMatchingLastWord(args.toArray(new String[args.size()]), GlobalVariables.server.getAllUsernames());
-        else if (args.size() == 2) return Arrays.stream(TextFormatting.values()).filter(TextFormatting::isColor).map(textFormatting -> Character.toString(textFormatting.formattingCode)).collect(Collectors.toList());
+    public List<String> getTabCompletions(MinecraftServer server, ICommandSender sender, LinkedList<String> args, @Nullable BlockPos targetPos) {
+        if (args.size() == 1) return CommandBase.getListOfStringsMatchingLastWord(args.toArray(new String[args.size()]), server.getOnlinePlayerNames());
+        else if (args.size() == 2) return Arrays.stream(TextFormatting.values()).filter(TextFormatting::isColor).map(TextFormatting -> Character.toString(TextFormatting.formattingCode)).collect(Collectors.toList());
         else return Collections.emptyList();
     }
 }
